# rag_pgvector

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: chunking.py  config.py  db.py  embeddings.py  llm.py  main.py  pdf.py
